src/test/ui/feature-gate-macro-literal-matcher.stderr
error[E0658]: :literal fragment specifier is experimental and subject to change (see issue #35625)
  --> $DIR/feature-gate-macro-literal-matcher.rs:14:19
   |
LL | macro_rules! m { ($lt:literal) => {} }
   |                   ^^^^^^^^^^^
   |
   = help: add #![feature(macro_literal_matcher)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
